portfolio/style.css
/* ... */
@font-face {
    font-family: 'Inter';
    src: url("assets/fonts/Inter-Bold.ttf");
    font-weight: 700;
}

html,
body {
    margin: 0;
    padding: 0;
    width: 100%;
    background-color: #000;
    scroll-behavior: smooth;
}

.wrapper {
    display: flex;
    max-width: 1440px;
    flex-direction: column;
    justify-content: space-between;
    margin: 0 auto;
}

/* Начало заголовок*/
.header {
    width: 100%;
    height: 90px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-image: url(./assets/img/header.jpg);
    background-repeat: no-repeat;
    background-position: center 0;
}

.logo {
    margin: 20px;
    transition: 0.5s;
}
.logo:hover {
    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
}

.nav {
    height: 90px;
    margin-left: auto;
    display: flex;
    align-items: center;
}

.menu-item {
    display: inline-block;
    height: 90px;
    padding: 0 12px;
    font-family: Inter;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: 90px;
}

.menu-item a {
    text-decoration: none;
    color: #BDAE82;
    transition: 0.5s;

}
.menu-item:hover a{
    color: #ffffff;
    cursor: pointer;
}

.lang {
    height: 50px;
    line-height: 50px;
    padding: 0 20px;
}

.lang-sw {
    font-family: Inter;
    font-size: 20px;
    font-style: normal;
    font-weight: 700;
    line-height: 50px;
    text-align: center;
    color: #ffffff;
    margin: 0 0 0 5px;
}

.lang-active {
    color: #BDAE82;
}

.burger {
    width: 50px;
    height: 50px;
    position: relative;
    display: none;
    margin-right: 65px;
}
.burger span {
    display: block;
    position: absolute;
    box-sizing: border-box;
    width: 50px;
    height: 4px;
    top: 23px;
    border: 1px solid #000;
    background-color: #fff;
    transition: 0.3s;
}

.burger::before,
.burger::after {
    display: block;
    content: "";
    position: absolute;
    box-sizing: border-box;
    width: 50px;
    height: 4px;
    left: 0;
    border: 1px solid #000;
    background-color: #fff;
    transition: 0.3s;
}

.burger::before {
    top: 11px;
}
.burger::after {
    bottom: 11px;
}

.header.open .burger span {
    transform: scale(0);
}

.header.open .burger::before {
    transform: rotate(45deg);
    top: 23px;
}
.header.open .burger::after {
    transform: rotate(-45deg);
    bottom: 23px;
}

/* Конец заголовка*/

/* Кнопка тип 2 для всей страницы */
.btn-type2 {
    width: 220px;
    height: 55px;
    background-color: #BDAE82;
    color: #000;
    line-height: 55px;
    margin: 40px 0 0 0;
    font-family: Inter;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: 40px;
    text-align: center;
    border: 0;
    transition: 0.3s;
}

.btn-type2:hover {
    color: #ffffff;
    cursor: pointer;
}

/* Начало main*/

.main {
    width: 100%;
    display: flex;
    flex-direction: column;
    scroll-behavior: smooth;
    margin: 0 auto;
}

section {
    width: 100%;
}

.section-other {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

.section-title {
    height: 80px;
    width: 700px;
    /* margin: 0 auto; */
    background-color: #000;
    text-align: center;
    padding: 100px 0 60px;
}

.section-title::before {
    position: relative;
    top: 39px;
    display: block;
    height: 2px;
    width: 700px;
    box-sizing: border-box;
    border: 1px solid #BDAE82;
    background-color: #BDAE82;
    content: "";
}

h2 {
    color: #BDAE82;
    font-family: Merriweather;
    font-size: 40px;
    font-style: normal;
    font-weight: 700;
    line-height: 80px;
}

.section-h2 {
    position: relative;
    z-index: 1;
    display: inline-block;
    margin: 0;
    padding: 0 20px;
    text-align: center;
    background-color: #000;
}

/* Начало hero*/
#hero {
    height: 820px;
    /* margin: -90px 0 0 0; */
    background-image: url("./assets/img/bg.jpg");
    /* background-size: cover; */
    background-position: center -90px;
    background-repeat: no-repeat;
    
}

.hero-inner {
    margin: 160px 0 0 80px;
}

.hero-title {
    height: 120px;
    margin: 0;
    font-family: Merriweather;
    font-size: 60px;
    font-style: normal;
    font-weight: 700;
    line-height: 120px;
    color:#ffffff;
    line-height: 120px;
}

.hero-text {
    height: 120px;
    width: 470px;
    font-family: Inter;
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: 40px;
    color:#ffffff;
    margin: 10px 0 0 0;
}

.hero-btn {
    margin: 25px 0 0 0;
}
/* Конец hero*/
/* Начало skills*/
.skills-container {
    width: 100%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
.skills-item {
    height: 240px;
    width: 320px;
    /* margin: 0 20px; */
}

.skills-icon {
    text-align: center;
}

.skills-item:hover img {
    filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
}

.skills-text1 {
    width: 280px;
    margin: 0 auto;
    font-family: Inter;
    font-size: 20px;
    font-style: normal;
    font-weight: 700;
    line-height: 40px;
    text-align: center;
    color: #ffffff;
    padding: 46px 0 20px 0;
}

.skills-text2 {
    width: 280px;
    margin: 0 auto;
    font-family: Inter;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 36px;
    text-align: center;
    color: #ffffff;
}
/* Конец skills */
/* Начало portfolio */
.portfolio-btn {
    text-align: center;
    padding: 0 0 60px 0;
}
/* ... */

